# simplaceity

./: .gitignore  .pyenv  CMakeLists.txt
core/: containers.h  context.cc  context.h  deterministic_rng.h  eqn_system.cc  eqn_system.h  hashlib.h  idstring.cc  idstring.h  log.cc  log.h  module.cc  netlist.cc  netlist.h  netlist_access.cc  netlist_access.h  object.h  phys_types.cc  phys_types.h  preface.cc  preface.h  sso_array.h
place/: detail_placer.cc  detail_placer.h  global_placer.cc  global_placer.h
test/: .gitignore  celllib.py  run_pnr.py  synth_picosoc.ys  top_picosoc.v
